[tool.poetry]
name = "material-color-utilities-python"
version = "0.1.0"
description = "Python port of material-color-utilities used for Material You colors"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
